Added usage examples

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <h1>Image Search Abstraction Microservice</h1>
+        <h1>Image Search Abstraction Layer</h1>
       </div>
       <div class="row">
         <h3>User stories:</h3>
@@ -22,6 +22,16 @@
       </div>
       <div class="row">
         <h3>Usage example:</h3>
+        <ul>
+          <li> Go to <code>https://imgabs.herokuapp.com/imagesearch/SEARCHTERM</code> to get results.</li>
+          <li> Use <code>?offset=NUM</code> to paginate results <code>https://imgabs.herokuapp.com/imagesearch/SEARCHTERM?offset=2</code>.</li>
+          <li> Go to <code>https://imgabs.herokuapp.com/imagesearch</code> to get a list of the most recently submitted search strings.</li>
+        </ul>
+      </div>
+      <div class="row">
+        <p class="text-center">
+          Coded by Giorgi Abuladze. | <a href="https://github.com/gabuladze/imgAbs" target="_blank">Github page</a>
+        </p>
       </div>
     </div>
   </body>
